chore: reworking webpack configs for the ES-module

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "npx webpack --config webpack.config.prod.js",
 		"build:dev": "npx webpack --config webpack.config.dev.js"
 	},
+	"type": "module",
 	"author": "",
 	"license": "ISC",
 	"description": "",
